--- a/layout.html
+++ b/layout.html
@@ -1,59 +1,70 @@
 <html>
-<header>Project Layout</header>
-<body>
-<title>Project Layout</title>
-<p>
-This is how the files are laid out in <a href=".">this directory</a>.
-<ul>
-    <li>layout.html (this file)
-    <li><a href="pom.xml">pom.xml</a>
-    <li><a href="src">src</a>
-	    <ul>
-		<li><a href="src/main/">main/</a>
-		    <ul>
-			<li><a href="src/main/java/">java/</a>
-			    <ul>
-				<li><a href="src/main/java/com/">com/</a>
-			    </ul>
-			<li><a href="src/main/resources/">resources/</a>
-			    <ul>
-				<li><a href="src/main/resources/help/">help/</a>
-				<li><a href="src/main/resources/icons/">icons/</a>
-			    </ul>
-		    </ul>
-		<li><a href="src/test/">test/</a>
-		    <ul>
-			<li><a href="src/test/java/">java/</a>
-			    <ul>
-				<li><a href="src/test/java/com/">com/</a>
-			    </ul>
-		    </ul>
-	     </ul>
-     <li><a href="target">target/</a>
+    <head>
+        <title>Project Layout</title>
+    </head>
+
+    <body>
+        <p>
+            This is how the files are laid out in <a href=".">this directory</a>.
         <ul>
-	    <li><a href="target/classes/">classes/</a>
-	        <ul>
-		    <li><a href="target/classes/com/">com/</a>
-		</ul>
-	    <li><a href="target/cobertura/">cobertura/</a>
-	        <ul>
-		    <li><a href="target/cobertura/cobertura.ser">cobertura.ser/</a>
-		</ul>
-	    <li><a href="target/generated-classes/">generated-classes/</a>
-	        <ul>
-		    <li><a href="target/generated-classes/cobertura/">cobertura/</a>
-			<ul>
-			    <li><a href="target/generated-classes/cobertura/com/">com/</a>
-			</ul>
-		</ul>
-	    <li><a href="target/maven-archiver/">maven-archiver/</a>
-	        <ul>
-		    <li><a href="target/maven-archiver/pom.properties">pom.properties/</a>
-		</ul>
-	    <li><a href="target/site/">site/</a>
-	    <li><a href="target/surefire-reports/">surefire-reports/</a>
-	    <li><a href="target/test-classes/">test-classes/</a>
-	</ul>
-</ul>
-</body>
+            <li>layout.html (this file)
+            <li><a href="pom.xml">pom.xml</a>
+            <li><a href="src">src</a>
+                <ul>
+                    <li><a href="src/main/">main/</a>
+                        <ul>
+                            <li><a href="src/main/java/">java/</a>
+                                <ul>
+                                    <li><a href="src/main/java/com/">com/</a>
+                                </ul>
+                            <li><a href="src/main/resources/">resources/</a>
+                                <ul>
+                                    <li><a href="src/main/resources/help/">help/</a>
+                                    <li><a href="src/main/resources/icons/">icons/</a>
+                                </ul>
+                        </ul>
+                    <li><a href="src/test/">test/</a>
+                        <ul>
+                            <li><a href="src/test/java/">java/</a>
+                                <ul>
+                                    <li><a href="src/test/java/com/">com/</a>
+                                </ul>
+                        </ul>
+                </ul>
+            <li><a href="target">target/</a>
+                <ul>
+                    <li><a href="target/classes/">classes/</a>
+                        <ul>
+                            <li><a href="target/classes/com/">com/</a>
+                        </ul>
+                    <li><a href="target/cobertura/">cobertura/</a>
+                        <ul>
+                            <li><a href="target/cobertura/cobertura.ser">cobertura.ser/</a>
+                        </ul>
+                    <li><a href="target/DBBrowser-0.1.0-SNAPSHOT/">DBBrowser-0.1.0-SNAPSHOT/</a>
+                        <ul>
+                            <li><a href="target/DBBrowser-0.1.0-SNAPSHOT/META-INF/">META-INF/</a>
+                            <li><a href="target/DBBrowser-0.1.0-SNAPSHOT/WEB-INF/">WEB-INF/</a>
+                                <ul>
+                                    <li><a href="target/DBBrowser-0.1.0-SNAPSHOT/WEB-INF/classes/">classes/</a>
+                                    <li><a href="target/DBBrowser-0.1.0-SNAPSHOT/WEB-INF/lib/">lib/</a>
+                                </ul>
+                        </ul>
+                    <li><a href="target/generated-classes/">generated-classes/</a>
+                        <ul>
+                            <li><a href="target/generated-classes/cobertura/">cobertura/</a>
+                                <ul>
+                                    <li><a href="target/generated-classes/cobertura/com/">com/</a>
+                                </ul>
+                        </ul>
+                    <li><a href="target/maven-archiver/">maven-archiver/</a>
+                        <ul>
+                            <li><a href="target/maven-archiver/pom.properties">pom.properties/</a>
+                        </ul>
+                    <li><a href="target/site/">site/</a>
+                    <li><a href="target/surefire-reports/">surefire-reports/</a>
+                    <li><a href="target/test-classes/">test-classes/</a>
+                </ul>
+        </ul>
+    </body>
 </html>
