Adding support for different client types -- Swing, AWT, etc...  Compiles, but little else.

--- a/layout.html
+++ b/layout.html
@@ -6,6 +6,7 @@
     <body>
         <p>
             This is how the files are laid out in <a href=".">this directory</a>.
+            It uses the Maven <a href="http://maven.apache.org/guides/introduction/introduction-to-the-standard-directory-layout.html">standard</a>.
         <ul>
             <li>layout.html (this file)
             <li><a href="pom.xml">pom.xml</a>
